<resources>
    <string name="app_name">Whatsapp</string>
    <string name="w">Whatsapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <string name="call">Call</string>
    <string name="darshan">Darshan Raval</string>
    <string name="hii">Hii</string>
    <string name="yesterday">Yesterday</string>
    <string name="group">New Group</string>
    <string name="broad">New broadcast</string>
    <string name="device">Link device</string>
    <string name="star">Starred Message</string>
    <string name="payment">Payment</string>
    <string name="setting">Setting</string>
    <string name="message">Message</string>
    <string name="Status">Status</string>
   <string name="info">Call Info</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="incoming">Incoming</string>
    <string name="out">outgoing</string>
</resources>