<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity4">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="45dp"
        app:cardUseCompatPadding="true">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/salmanp"
            android:scaleType="fitXY"
            android:contentDescription="@string/call"
            android:id="@+id/dp"/>
    </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/message"
            android:textStyle="bold"

            android:id="@+id/name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/message"
        android:textStyle="bold"
        android:layout_marginTop="7dp"
        android:id="@+id/number"/>
       <LinearLayout

         android:layout_marginTop="20dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           tools:ignore="UselessLeaf">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:textSize="20sp"
               android:drawableTop="@drawable/baseline_chat_24"
               android:text="@string/message"
               android:layout_marginStart="20dp"
               tools:ignore="UseCompatTextViewDrawableXml" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:textSize="20sp"
               android:drawableTop="@drawable/baseline_call_24"
               android:text="@string/audio"
               android:layout_marginStart="70dp"
               tools:ignore="UseCompatTextViewDrawableXml" />
           <TextView
               android:layout_marginStart="70dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textStyle="bold"
               android:textSize="20sp"
               android:drawableTop="@drawable/baseline_videocam_24"
               android:text="@string/video"
               tools:ignore="UseCompatTextViewDrawableXml" />
       </LinearLayout>
       <ImageView

           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/baseline_favorite_24"
           android:contentDescription="@string/info"
           android:layout_margin="10dp"/>
           <TextView
               android:layout_marginTop="10dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/incoming"
               android:textStyle="bold"
               android:textSize="15sp"
               android:drawableStart="@drawable/baseline_videocam_24"
               android:padding="10dp"
               android:drawablePadding="20dp"
               tools:ignore="UseCompatTextViewDrawableXml" />
</LinearLayout>