<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/chat"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessLeaf,UselessParent">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="45dp"
            app:cardUseCompatPadding="true">
            <ImageView
                android:id="@+id/profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/darshan"
                android:contentDescription="@string/chat"
                android:scaleType="fitXY"/>
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:text="@string/darshan"
                android:layout_marginStart="5dp"
                android:textStyle="bold"/>
                 <TextView
                     android:layout_marginEnd="10dp"
                     android:textSize="10sp"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:text="@string/yesterday"
                     android:id="@+id/t"
                     tools:ignore="RelativeOverlap,SmallSp" />
                 <TextView
                     android:layout_marginStart="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/name"
                     android:id="@+id/m"
                     android:text="@string/hii"
                     android:textStyle="bold"
                     android:textSize="10sp"
                     tools:ignore="SmallSp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>