<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <LinearLayout
        android:background="@drawable/oppo"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf,UselessParent">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="45dp">
            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/viratd"
                android:contentDescription="@string/hii"/>
        </androidx.cardview.widget.CardView>
           <TextView
              android:layout_marginTop="10dp"
               android:layout_marginStart="20dp"
               android:textStyle="bold"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/darshan"
               android:id="@+id/name1"/>
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="90dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_videocam_24"
                    android:contentDescription="@string/hii"/>
        <ImageView
            android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_call_24"
            android:contentDescription="@string/setting"/>
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/device"
            android:src="@drawable/baseline_more_vert_24"/>
    </LinearLayout>
      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <ImageView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/two"
              android:scaleType="centerCrop"
              android:contentDescription="@string/device"/>
          <TextView
              android:layout_margin="20dp"
              android:id="@+id/name2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/message"
              android:textColor="@color/white"
              android:textStyle="bold"/>
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end"
              android:text="@string/hii"
              android:textStyle="bold"
              android:textColor="@color/white"
              android:layout_marginEnd="20dp"
              android:layout_marginTop="50dp"/>
      </FrameLayout>
</LinearLayout>
